deploy/mail/mailcore-utils.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mailman-core-utils
  namespace: mail
  labels:
    component: mail-core-utils
    app: mail-suit-service
  annotations:
    flux.weave.works/tag.mail-git-tools: semver:~1.0
    flux.weave.works/tag.mailman-core-utils: semver:~1.0
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mail-core-utils
      app: mail-suit-service
  template:
    metadata:
      labels:
        component: mail-core-utils
        app: mail-suit-service
    spec:
      # init container used to clone the repo and move it into the dir that core-utils will use.
      containers:
      - name: mailman-core-utils
          # Please ensure the image exists
        image: swr.ap-southeast-1.myhuaweicloud.com/opengauss/mailman-core-utils:v1.0.2020031900
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - mountPath: /opt/mailman-utils/data_source
          name: mailman-core-utils
        command:
        - /bin/sh
        - -c
        - |
          cp -r /opt/mailman-utils/data_source/infra/src/mail/templates  .;
          cp /opt/mailman-utils/data_source/infra/src/mail/dockerfile/core_utils/mailman-core-utils.py ./mailman-core-utils.py
          docker-entrypoint.sh python -u mailman-core-utils.py
          sleep 3600
      volumes:
      - name: mailman-core-utils
        emptyDir: {}
