deploy/mail/mailcore.yaml
---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: mailman-core
  namespace: mail
  labels:
    app: mail-suit-service
  annotations:
    flux.weave.works/tag.mailman-core: semver:~1.0
    flux.weave.works/automated: 'true'
spec:
  serviceName: mail-suit-service
  replicas: 1
  selector:
    matchLabels:
      app: mail-suit-service
  template:
    metadata:
      labels:
        app: mail-suit-service
    spec:
      containers:
      - name: mailman-core
        image: swr.cn-south-1.myhuaweicloud.com/opengauss/mail-core:v1.0.2020031900
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - mountPath: /opt/mailman/
          name: mailman-core-volume
        command:
        - /bin/sh
        - -c
        - |
          export DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_IP}:${POSTGRES_PORT}/mailmandb
          sed -i "s/charset: us-ascii/charset: utf-8/g" /usr/lib/python3.6/site-packages/mailman/config/schema.cfg;
          exec docker-entrypoint.sh master --force
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
      volumes:
      - name: mailman-core-volume
        persistentVolumeClaim:
          claimName: config-vol
