deploy/mail/mtaservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailman-exim4-service
  namespace: mail
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: a195fd7a-ad9a-4130-8745-de15f47d36d6
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  #We need set this into 'Local' since we need get the client IP for relay excluding.
  externalTrafficPolicy: Local
  loadBalancerIP: 159.138.9.224
  ports:
  - port: 25
    name: exim4-port
    targetPort: 25
    protocol: TCP
  selector:
    component: mail-exim4-service
  type: LoadBalancer

# StatefulSet for exim4 services
---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: mailman-exim4
  namespace: mail
  labels:
    app: mail-suit-service
    component: mail-exim4-service
  annotations:
    flux.weave.works/tag.mailman-exim4: semver:~1.0
    flux.weave.works/automated: 'true'
spec:
  serviceName: mail-suit-service
  replicas: 1
  selector:
    matchLabels:
      app: mail-suit-service
      component: mail-exim4-service
  template:
    metadata:
      labels:
        app: mail-suit-service
        component: mail-exim4-service
    spec:
      containers:
      - name: mailman-exim4
          #NOTE: This image is directly built from our dockerfile located in exim4 folder
        image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/mailman-exim4:45a83427f0bbe7ac4d2bcc0e1e4d8c1b097fbf8d
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - mountPath: /etc/exim4/conf.d/main/25_mm3_macros
          name: mailman-exim4-configmap-volume
          subPath: 25_mm3_macros
        - mountPath: /etc/exim4/conf.d/main/01_exim4-config_listmacrosdefs
          name: mailman-exim4-configmap-volume
          subPath: 01_exim4-config_listmacrosdefs
        - mountPath: /etc/exim4/conf.d/auth/30_exim4-config_examples
          name: mailman-exim4-configmap-volume
          subPath: 30_exim4-config_examples
        - mountPath: /etc/exim4/conf.d/main/00_local_macros
          name: mailman-exim4-configmap-volume
          subPath: 00_local_macros
        - mountPath: /etc/exim4/conf.d/transport/55_mm3_transport
          name: mailman-exim4-configmap-volume
          subPath: 55_mm3_transport
        - mountPath: /etc/exim4/conf.d/router/455_mm3_router
          name: mailman-exim4-configmap-volume
          subPath: 455_mm3_router
        - mountPath: /etc/exim4/update-exim4.conf.conf
          name: mailman-exim4-configmap-volume
          subPath: update-exim4-conf.conf
              # This file path also used in command option that used as a exim4 log path
        - mountPath: /opt/mailman/
          name: mailman-core-data
        - name: mailman-secrets
          mountPath: /etc/exim4/passwd
          subPath: exim4_credential
        - name: mailman-cert-secrets
          mountPath: /etc/exim4/exim.crt
          subPath: server.crt
        - name: mailman-cert-secrets
          mountPath: /etc/exim4/exim.key
          subPath: server.key
        - name: mailman-secrets
          mountPath: /etc/exim4/dkim/opengauss.key
          subPath: dkim_key
          # NOTE: since we added new configuration files we need reload exim4 and start up
          # 1. update password  and key file mode
          # 2. update the log folder permission
          # 3. reconfigure exim4
          # 4. start the service
        command:
        - /bin/sh
        - -c
        - |
          mkdir -p /var/log/exim4
          chown root:Debian-exim /etc/exim4/passwd /etc/exim4/exim.crt /etc/exim4/exim.key /etc/exim4/dkim/opengauss.key
          chmod 640 /etc/exim4/passwd /etc/exim4/exim.crt /etc/exim4/exim.key /etc/exim4/dkim/opengauss.key
          mkdir -p /opt/mailman/exim_log
          chown Debian-exim:Debian-exim -R /opt/mailman/exim_log
          update-exim4.conf
          exec tini -- exim -bd -v;
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
      volumes:
      - name: mailman-exim4-configmap-volume
        configMap:
          name: mailman-exim4-configmap
      - name: mailman-core-data
        persistentVolumeClaim:
          claimName: config-vol
      - name: mailman-secrets
        secret:
          secretName: mailman-secrets
      - name: mailman-cert-secrets
        secret:
          secretName: mailman-cert-secrets
