deploy/mail/webservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailman-web-service
  namespace: mail
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 4715883e-0aa8-476c-95c4-79274a10d324
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 49.0.246.28
  ports:
  - port: 8000
    name: website-port-uwsgi-http
    targetPort: 8000
    protocol: TCP
  - port: 80
    name: website-port-http
    targetPort: 80
    protocol: TCP
  - port: 443
    name: website-port-https
    targetPort: 443
    protocol: TCP
  selector:
    component: mail-web-service
  type: LoadBalancer

# Deployment for mail web service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mailman-web
  namespace: mail
  labels:
    component: mail-web-service
    app: mail-suit-service
  annotations:
    flux.weave.works/tag.mailman-web: semver:~1.0
    flux.weave.works/automated: 'true'
spec:
  replicas: 2
  selector:
    matchLabels:
      component: mail-web-service
      app: mail-suit-service
  template:
    metadata:
      labels:
        component: mail-web-service
        app: mail-suit-service
    spec:
      hostname: mailman-web
      containers:
      - name: mailman-web
          # We modified the mail-web image to add static folder.
        image: swr.ap-southeast-1.myhuaweicloud.com/opengauss/mail-web:v1.0.2020042802
        imagePullPolicy: "IfNotPresent"
        volumeMounts:
        - mountPath: /opt/mailman-web-config
          name: mailman-web-configmap-volume
        - mountPath: /etc/nginx/ssl
          name: mailman-secret-volume
        - mountPath: /opt/mailman-web-data
          name: mailman-web-volume
        - mountPath: /usr/lib/python3.6/site-packages/postorius/templates/postorius/lists/summary.html
          name: mailman-webpage-hack-volume
          subPath: summary.html
        - mountPath: /usr/lib/python3.6/site-packages/postorius/forms/list_forms.py
          name: mailman-webpage-hack-volume
          subPath: list_forms.py
        command:
        - /bin/sh
        - -c
        - |
          cp /opt/mailman-web-config/settings_local.py /opt/mailman-web-data;
          cp /opt/mailman-web-config/base.html /usr/lib/python3.6/site-packages/postorius/templates/postorius;
          #disable signup page for mailman web hyperkitty
          cp /opt/mailman-web-config/base2.html /usr/lib/python3.6/site-packages/hyperkitty/templates/hyperkitty/base.html
          cp /opt/mailman-web-config/email.py /usr/lib/python3.6/site-packages/hyperkitty/models/email.py
          exec docker-entrypoint.sh uwsgi --ini /opt/mailman-web/uwsgi.ini;
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
      - image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/nginx:1.20.0
        imagePullPolicy: IfNotPresent
        name: nginx-web
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/default.conf
          name: mailman-web-configmap-volume
          subPath: default.conf
        - mountPath: /opt/mailman-web-data
          name: mailman-web-volume
        - mountPath: /etc/nginx/ssl
          name: mailman-secret-volume
      volumes:
      - name: mailman-web-volume
        persistentVolumeClaim:
          claimName: mailweb-static-share-vol
      - name: mailman-web-configmap-volume
        configMap:
          name: mailman-web-configmap
      - name: mailman-secret-volume
        secret:
          secretName: mailman-cert-secrets
      - name: mailman-webpage-hack-volume
        configMap:
          name: mailman-webpage-hack
